stmMX/.metadata/.plugins/org.eclipse.cdt.ui/echo.build.log
13:52:08 **** Build of configuration Debug for project echo ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F767xx -c -I../Core/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv5-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:171:1: error: expected declaration or statement at end of input
  171 | };
      | ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:120:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  120 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:49: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

13:52:12 Build Failed. 2 errors, 1 warnings. (took 3s.948ms)

